--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test:unit": "jest --coverage",
     "test:onlychanged": "jest --onlyChanged --coverage",
     "lint": "standard",
-    "test": "npm run lint && npm run test:unit"
+    "test": "npm run lint && npm run test:unit",
+    "build": "npm run build"
   },
   "keywords": [],
   "author": "Tierney Cyren <hello@bnb.im>",
